# learscail

./: .gitignore  BUILD.bazel  DEPLOYMENT.md  MIGRATION_SUMMARY.md  MODULE.bazel  QUICKSTART.md  TESTING.md  WORKSPACE.bazel  package-lock.json  package.json  taskfile.yml
.githooks/: README.md  install.sh  pre-commit
.github/workflows/: README.md  docker-build-push.yml  docker-hub-build-push.yml  tauri-build.yml
backend/: .env.example  .gitignore  DEBUG.md  README.md  package-lock.json  package.json  test-env.js
backend/src/: index.ts
backend/src/config/: index.ts
backend/src/middleware/: errorHandler.ts
backend/src/routes/: geograph.ts  graphhopper.ts  logainm.ts  nominatim.ts  sraid.ts
docker/: .env.example  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  QUICKSTART.md  backend.Dockerfile  docker-compose.yml  docker-compose.yml.fixed  nginx-reverse-proxy.conf  nginx.conf
frontend/: .env.example  .gitignore  BUILD.bazel  index.html  package-lock.json  package.json  pnpm-lock.yaml  test-backend.html  tsconfig.json
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: DetailPanel.tsx  HistoryPanel.tsx  Map.tsx
frontend/src/components/navigation/: BottomNav.tsx  HamburgerMenu.tsx
frontend/src/config/: api.ts
frontend/src/contexts/: LanguageContext.tsx
frontend/src/i18n/: config.ts
frontend/src/locales/: en.json  ga.json
frontend/src/pages/about/: About.tsx  Contact.tsx  Directions.tsx  Export.tsx  Favorites.tsx  History.tsx  Import.tsx  Settings.tsx
frontend/src/utils/: directionsStorage.ts  favorites.ts  geograph.ts  history.ts  homeLocation.ts  logainm.ts  mapStyle.ts  mapView.ts  routing.ts  sraid.ts  wikipedia.ts  wiktionary.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
