workspace(name = "mappa")

# # Load rules_js for JavaScript/TypeScript
# load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

# http_archive(
#     name = "aspect_rules_js",
#     sha256 = "4a880e891f67d6ca0e3a38fbe215e2f7d2e8e5e24f3e5a64d5e7f8e5e5c3c5e3",
#     strip_prefix = "rules_js-1.42.0",
#     url = "https://github.com/aspect-build/rules_js/releases/download/v1.42.0/rules_js-v1.42.0.tar.gz",
# )

# load("@aspect_rules_js//js:repositories.bzl", "rules_js_dependencies")

# rules_js_dependencies()

# load("@aspect_rules_js//npm:repositories.bzl", "npm_translate_lock")

# npm_translate_lock(
#     name = "npm",
#     pnpm_lock = "//react:pnpm-lock.yaml",
# )I think

# load("@npm//:repositories.bzl", "npm_repositories")

# npm_repositories()
